syntax = "proto3";

// If you make any changes make sure you run: make regenerate-grpc

package agentrpc;

message ConfigurationRequest {
}

message ConfigurationResponse {
}

service GitLabService {
  // Fetch agentk configuration from the server.
  rpc GetConfiguration (ConfigurationRequest) returns (ConfigurationResponse) {}
}
